--- a/index.html
+++ b/index.html
@@ -3,10 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Daniel Mehler - Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is a simple website hosted on GitHub Pages.</p>
+    <header>
+        <h1>Daniel Mehler</h1>
+        <p>22 Years Old | Bachelor of Cognitive Science (Total Grade: 1.7 | Bachelor Thesis: 1.3)</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>Hello! My name is Daniel Mehler, and I am a recent graduate with a Bachelor of Cognitive Science. I have a passion for technology, languages, and staying active through various sports.</p>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <h3>Programming Languages:</h3>
+        <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>JavaScript</li>
+            <li>R</li>
+        </ul>
+        
+        <h3>Languages:</h3>
+        <ul>
+            <li>Spanish (C1)</li>
+            <li>Latin</li>
+            <li>English</li>
+        </ul>
+        
+        <h3>Software Knowledge:</h3>
+        <ul>
+            <li>Microsoft Word</li>
+            <li>PowerPoint</li>
+            <li>Excel</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Hobbies & Sports</h2>
+        <ul>
+            <li>Gym (Calisthenics)</li>
+            <li>Volleyball</li>
+            <li>Tennis</li>
+            <li>Skiing</li>
+            <li>Running</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Daniel Mehler. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
