Changed some headers

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>English</li>
         </ul>
         
-        <h3>Software Knowledge:</h3>
+        <h3>Additional skills:</h3>
         <ul>
             <li>Microsoft Word</li>
             <li>PowerPoint</li>
