Added some infos

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li>Spanish (C1)</li>
             <li>Latin</li>
             <li>English</li>
+            <li>German (Native)</li>
         </ul>
         
         <h3>Additional skills:</h3>
@@ -51,6 +52,7 @@
             <li>Tennis</li>
             <li>Skiing</li>
             <li>Running</li>
+            <li>Hiking</li>
         </ul>
     </section>
 
