--- a/index.html
+++ b/index.html
@@ -7,146 +7,142 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Lebenslauf</h1>
+    <div class="container">
+        <h1>Lebenslauf</h1>
 
-    <div class="section">
-        <h2>Persönliche Daten</h2>
-        <p><strong>Name:</strong> Daniel Mehler</p>
-        <p><strong>Geburtstag:</strong> 21.10.2002</p>
-        <p><strong>Staatsangehörigkeit:</strong> Deutsch</p>
-        <p><strong>E-Mail:</strong> <a href="mailto:daniel.sebastian.mehler@gmail.com">daniel.sebastian.mehler@gmail.com</a></p>
+        <div class="section">
+            <h2>Persönliche Daten</h2>
+            <p><strong>Name:</strong> Daniel Mehler</p>
+            <p><strong>Geburtstag:</strong> 21.10.2002</p>
+            <p><strong>Staatsangehörigkeit:</strong> Deutsch</p>
+            <p><strong>E-Mail:</strong> <a href="mailto:daniel.sebastian.mehler@gmail.com">daniel.sebastian.mehler@gmail.com</a></p>
+        </div>
+
+        <div class="section">
+            <h2>Ausbildung</h2>
+            <ul>
+                <li><strong>2013-2021:</strong> Erwerb der allgemeinen Hochschulreife am Ammersee-Gymnasium in Dießen am Ammersee</li>
+            </ul>
+            <p class="indented">Abschlussnote: 1,4</p>
+            <ul>
+                <li><strong>2021-2024:</strong> Erwerb des Bachelor of Science in der Kognitionswissenschaft an der Eberhard-Karls-Universität Tübingen</li>
+            </ul>
+            <p class="indented">Abschlussnote: 1,7</p>
+            <p class="indented">Note der Abschlussarbeit: 1,3</p>
+            <p class="indented">Abschlussarbeit: Im Rahmen meiner Bachelorarbeit habe ich ein Experiment im Bereich des kreativen Schreibens durchgeführt, um zu untersuchen, ob und inwiefern ein KI-Schreibtool, wie ChatGPT, die Ideenproduktion des Schreibprozesses beeinflusst.</p>
+        </div>
+
+        <div class="section">
+            <h2>Kognitionswissenschaft – Worum geht es?</h2>
+            <p>Kognitionswissenschaft ist ein interdisziplinäres Feld, das sich mit der Erforschung von Denken, Wahrnehmung, Sprache, Lernen und Entscheidungsprozessen beschäftigt. Sie vereint Erkenntnisse aus Bereichen der Informatik, Psychologie, Linguistik, Neurowissenschaften, Mathematik und Philosophie, um die Mechanismen des menschlichen Geistes und deren Anwendung zu verstehen. Ein besonders wichtiger Bereich der Kognitionswissenschaft an der Universität Tübingen ist die Computersimulation von kognitiven und neuronalen Prozessen sowie die formalisierte Theorienbildung dieser Prozesse.</p>
+        </div>
+
+        <div class="section">
+            <h2>Erworbene Kenntnisse & Fähigkeiten</h2>
+            <h3>Informatik</h3>
+            <p>Theorie:</p>
+            <ul>
+                <li>Algorithmen, Graphentheorie, Komplexitätstheorie, Logik, Bildverarbeitung, Machine Learning, Grundlagen der Multimediatechnik</li>
+            </ul>
+            <p>Programmiersprachen:</p>
+            <ul>
+                <li>Java, Python, HTML/CSS, JavaScript, R, Matlab, SQL</li>
+            </ul>
+            <p>Teamprojekt:</p>
+            <ul>
+                <li>Entwicklung eines unterstützenden Diagnosesystems in Matlab</li>
+            </ul>
+
+            <h3>Psychologie</h3>
+            <p>Allgemeine Psychologie:</p>
+            <ul>
+                <li>Emotion, Lernen, Motivation, Aufmerksamkeit, Denken</li>
+            </ul>
+            <p>Biologische Psychologie:</p>
+            <ul>
+                <li>Neuronale, hormonelle und genetische Grundlagen des menschlichen Verhaltens (Schlaf, Psychische Störungen, Neurologische Erkrankungen)</li>
+            </ul>
+            <p>Kognitionspsychologie:</p>
+            <ul>
+                <li>Mentale Prozesse des Erwerbs, der Verarbeitung, der Speicherung und der Nutzung von Wissen (insb. Neuronale Korrelate)</li>
+            </ul>
+
+            <h3>Linguistik</h3>
+            <p>Theorie:</p>
+            <ul>
+                <li>Natural Language Processing (Neuronal Networks), Phonetik, Phonologie</li>
+            </ul>
+            <p>Praxis:</p>
+            <ul>
+                <li>Programmieren und Trainieren eines Spracherkennungssystems</li>
+            </ul>
+
+            <h3>Neurowissenschaften</h3>
+            <p>Neuro- und Sinnesphysiologie:</p>
+            <ul>
+                <li>Funktion und Mechanismen des Nervensystems und der Sinnesorgane (z.B. Anatomie des Gehirns, Plastizität, Erkrankungen des Nervensystems, Reizaufnahme und Verarbeitung)</li>
+            </ul>
+            <p>Computational Neuroscience:</p>
+            <ul>
+                <li>Physikalische Modellierung neuronaler Zustände (z.B. Neuronale Netze, Fourier Transformation usw.)</li>
+            </ul>
+
+            <h3>Mathematik</h3>
+            <p>Grundlagen:</p>
+            <ul>
+                <li>Multivariable Analysis & Lineare Algebra</li>
+            </ul>
+            <p>Statistik:</p>
+            <ul>
+                <li>Statistische Methoden zur Analyse von Daten (ANOVA, Lineare Regression, PCA, usw.), R, Forschungsmethoden</li>
+            </ul>
+
+            <h3>Philosophie</h3>
+            <p>Allgemein:</p>
+            <ul>
+                <li>Logik & Philosophie mentaler Zustände (Descartes, Kant, Leibniz usw.)</li>
+            </ul>
+            <p>Spezifisch:</p>
+            <ul>
+                <li>Philosophie der intelligenten Systeme und Technologie (z.B. Hat ChatGPT ein Bewusstsein?)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Sprachkenntnisse</h2>
+            <ul>
+                <li>1. Fremdsprache: Englisch (Kenntnisse aus sechs Jahren Schulunterricht und drei Jahren Hochschulstudium)</li>
+                <li>2. Fremdsprache: Latein (Kenntnisse aus sieben Jahren Schulunterricht)</li>
+                <li>3. Fremdsprache: Spanisch (Kenntnisse aus fünf Jahren Schulunterricht)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Sportliche Interessen</h2>
+            <ul>
+                <li>Volleyball</li>
+                <li>Gym</li>
+                <li>Golf</li>
+                <li>Skifahren</li>
+                <li>Tennis</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Weitere Interessen</h2>
+            <ul>
+                <li>Datenanalytik</li>
+                <li>Programmieren (Apps)</li>
+                <li>Teilnahme an Start-Up Workshops</li>
+                <li>Schreiben von Texten in verschiedenen Sprachen</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Zukunftspläne</h2>
+            <p>2025-2027: Absolvieren eines Masterstudiums im Bereich KI (z.B. Machine Learning)</p>
+        </div>
     </div>
-
-    <div class="section">
-        <h2>Ausbildung</h2>
-        <ul>
-            <li><strong>2013-2021:</strong> Erwerb der allgemeinen Hochschulreife am Ammersee-Gymnasium in Dießen am Ammersee</li>
-        </ul>
-        <p class="indented">Abschlussnote: 1,4</p>
-        <ul>
-            <li><strong>2021-2024:</strong> Erwerb des Bachelor of Science in der Kognitionswissenschaft an der Eberhard-Karls-Universität Tübingen</li>
-        </ul>
-        <p class="indented">Abschlussnote: 1,7</p>
-        <p class="indented">Note der Abschlussarbeit: 1,3</p>
-        <ul>
-            <li><strong>Abschlussarbeit:</strong> Im Rahmen meiner Bachelorarbeit habe ich ein Experiment im Bereich des kreativen Schreibens durchgeführt, um zu untersuchen, ob und inwiefern ein KI-Schreibtool, wie ChatGPT, die Ideenproduktion des Schreibprozesses beeinflusst.</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Kognitionswissenschaft – Worum geht es?</h2>
-        <p>Kognitionswissenschaft ist ein interdisziplinäres Feld, das sich mit der Erforschung von Denken, Wahrnehmung, Sprache, Lernen und Entscheidungsprozessen beschäftigt. Sie vereint Erkenntnisse aus Bereichen der Informatik, Psychologie, Linguistik, Neurowissenschaften, Mathematik und Philosophie, um die Mechanismen des menschlichen Geistes und deren Anwendung zu verstehen. Ein besonders wichtiger Bereich der Kognitionswissenschaft an der Universität Tübingen ist die Computersimulation von kognitiven und neuronalen Prozessen sowie die formalisierte Theorienbildung dieser Prozesse.</p>
-    </div>
-
-    <div class="section">
-        <h2>Erworbene Kenntnisse & Fähigkeiten</h2>
-        <h3>Informatik</h3>
-        <p>Theorie:</p>
-        <ul>
-            <li>Algorithmen, Graphentheorie, Komplexitätstheorie, Logik, Bildverarbeitung, Machine Learning, Grundlagen der Multimediatechnik</li>
-        </ul>
-        <p>Programmiersprachen:</p>
-        <ul>
-            <li>Java, Python, HTML/CSS, JavaScript, R, Matlab, SQL</li>
-        </ul>
-        <p>Teamprojekt:</p>
-        <ul>
-            <li>Entwicklung eines unterstützenden Diagnosesystems in Matlab</li>
-        </ul>
-
-        <h3>Psychologie</h3>
-        <p>Allgemeine Psychologie:</p>
-        <ul>
-            <li>Emotion, Lernen, Motivation, Aufmerksamkeit, Denken</li>
-        </ul>
-        <p>Biologische Psychologie:</p>
-        <ul>
-            <li>Neuronale, hormonelle und genetische Grundlagen des menschlichen Verhaltens (Schlaf, Psychische Störungen, Neurologische Erkrankungen)</li>
-        </ul>
-        <p>Kognitionspsychologie:</p>
-        <ul>
-            <li>Mentale Prozesse des Erwerbs, der Verarbeitung, der Speicherung und der Nutzung von Wissen (insb. Neuronale Korrelate)</li>
-        </ul>
-
-        <h3>Linguistik</h3>
-        <p>Theorie:</p>
-        <ul>
-            <li>Natural Language Processing (Neuronal Networks), Phonetik, Phonologie</li>
-        </ul>
-        <p>Praxis:</p>
-        <ul>
-            <li>Programmieren und Trainieren eines Spracherkennungssystems</li>
-        </ul>
-
-        <h3>Neurowissenschaften</h3>
-        <p>Neuro- und Sinnesphysiologie:</p>
-        <ul>
-            <li>Funktion und Mechanismen des Nervensystems und der Sinnesorgane (z.B. Anatomie des Gehirns, Plastizität, Erkrankungen des Nervensystems, Reizaufnahme und Verarbeitung)</li>
-        </ul>
-        <p>Computational Neuroscience:</p>
-        <ul>
-            <li>Physikalische Modellierung neuronaler Zustände (z.B. Neuronale Netze, Fourier Transformation usw.)</li>
-        </ul>
-
-        <h3>Mathematik</h3>
-        <p>Grundlagen:</p>
-        <ul>
-            <li>Multivariable Analysis & Lineare Algebra</li>
-        </ul>
-        <p>Statistik:</p>
-        <ul>
-            <li>Statistische Methoden zur Analyse von Daten (ANOVA, Lineare Regression, PCA, usw.), R, Forschungsmethoden</li>
-        </ul>
-
-        <h3>Philosophie</h3>
-        <p>Allgemein:</p>
-        <ul>
-            <li>Logik & Philosophie mentaler Zustände (Descartes, Kant, Leibniz usw.)</li>
-        </ul>
-        <p>Spezifisch:</p>
-        <ul>
-            <li>Philosophie der intelligenten Systeme und Technologie (z.B. Hat ChatGPT ein Bewusstsein?)</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Sprachkenntnisse</h2>
-        <ul>
-            <li>1. Fremdsprache: Englisch (Kenntnisse aus sechs Jahren Schulunterricht und drei Jahren Hochschulstudium)</li>
-            <li>2. Fremdsprache: Latein (Kenntnisse aus sieben Jahren Schulunterricht)</li>
-            <li>3. Fremdsprache: Spanisch (Kenntnisse aus fünf Jahren Schulunterricht)</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Sportliche Interessen</h2>
-        <ul>
-            <li>Volleyball</li>
-            <li>Gym</li>
-            <li>Golf</li>
-            <li>Skifahren</li>
-            <li>Tennis</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Weitere Interessen</h2>
-        <ul>
-            <li>Datenanalytik</li>
-            <li>Programmieren (Apps)</li>
-            <li>Teilnahme an Start-Up Workshops</li>
-            <li>Schreiben von Texten in verschiedenen Sprachen</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Zukunftspläne</h2>
-        <p>2025-2027: Absolvieren eines Masterstudiums im Bereich KI (z.B. Machine Learning)</p>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Daniel Mehler. All rights reserved.</p>
-    </footer>
 </body>
 </html>
 
